2007-08-27  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: Updated with news for version 0.1.91.
	* README: Updated to version 0.1.91.
	* configure.in: Updated to version 0.1.91.
	* debian/changelog: Updated to version 0.1.91.

2007-08-13  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: Updated to version 0.1.90.
	* po/POTFILES.skip: Added accerciser.desktop.in.

2007-08-09  Eitan Isaacson  <eitan@ascender.com>

	* plugins/api_view.py: Fixed assumption that the type of a variable is
	always a string.

2007-07-31  Eitan Isaacson  <eitan@ascender.com>

	* po/POTFILES.in: Removed weird automated addition.
	* po/POTFILES.skip: Removed accerciser.desktop.in.
	* src/lib/accerciser/plugin/message.py: Added an assertion test to 
	fix bug #460071. I wish I understood what the root of the problem
	is, but I can't seem to replicate this on my system.

2007-07-30  Eitan Isaacson  <eitan@ascender.com>

	* po/POTFILES.in: 
	* po/POTFILES.skip: Added and skipped relevant files. 
	Thanks Claude Paroz.

2007-07-29  Eitan Isaacson  <eitan@ascender.com>

	* README: 
	* configure.in: 
	* debian/changelog: Version bumped to version 0.1.90.

	* NEWS: Updated for version 0.1.6.

2007-07-20  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/__init__.py: Block SIGSTP so we don't hang
	the desktop, thank you Simos Xenitellis (bug 457965).

2007-07-08  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: Marked 'C' string as untranslatable.
	* src/lib/accerciser/accessible_treeview.py: Added some safety harnesses.
	* src/lib/accerciser/plugin/view.py: Fixed new view dialog.
	
2007-07-08  Eitan Isaacson  <eitan@ascender.com>

	* README: Bumped to 0.1.6.
	* configure.in: Bumped to 0.1.6.
	* debian/changelog: Bumped to 0.1.6.
	* src/lib/accerciser/bookmarks.py: Fixed bookmark deletion. Fixed
	application bookmarks.
	* src/lib/accerciser/accessible_treeview.py: Fixed indirect
	selection of top level nodes.

2007-07-08  Eitan Isaacson  <eitan@ascender.com>
