@@ -39,6 +39,7 @@ AC_OUTPUT([
 Makefile
 accerciser.spec
 accerciser.desktop.in
+doc/Makefile
 help/Makefile
 icons/Makefile
 pixmaps/Makefile
