@@ -1,0 +1,4 @@
+man_MANS = accerciser.1
+
+EXTRA_DIST = $(man_MANS)
+
