@@ -1,0 +1,31 @@
+.TH ACCERCISER 1 "27 August 2007"
+.SH NAME
+ACCERCISER \- an interactive accessibility explorer.
+.SH SYNOPSIS
+.B accerciser
+[\-\-version] [\-\-help]
+.SH DESCRIPTION
+This manual page documents briefly
+.B accerciser\fP.
+.PP
+.\" TeX users may be more comfortable with the \fB<whatever>\fP and
+.\" \fI<whatever>\fP escape sequences to invode bold face and italics, 
+.\" respectively.
+\fBaccerciser\fP is an interactive Python accessibility explorer for the GNOME
+desktop. It uses AT-SPI to inspect and control widgets, allowing you to
+check if an application is providing correct information to assistive
+technologies and automated test frameworks. Accerciser has a simple
+plug-in framework which you can use to create custom views of
+accessibility information.
+.SH OPTIONS
+.B \-\-version
+Print the version number.
+.TP
+.B \-?, \-\-help
+Show summary of options.
+.SH CONFIGURATION
+\fBmetacity\fP configuration can be found under \fIPreferences\fP->\fIWindows\fP and \fIPreferences\fP->\fIKeyboard Shortcuts\fP on the menu-panel. Advanced configuration can be achieved directly through gconf editing (gconf-editor or gconftool-2).
+.SH SEE ALSO
+Comprehensive \fBaccerciser\fP documentation could be found under the Help menu in \fBaccerciser\fP.
+.SH AUTHOR
+The original manual page was written by Eitan Isaacson <eitan@ascender.com>.
