@@ -1,5 +1,11 @@
 2007-08-27  Eitan Isaacson  <eitan@ascender.com>
 
+	* doc/accerciser.1: New manpage.
+	* doc/Makefile.am: New Makefile.am.
+	* configure.in: Added doc dir.
+	* Makefile.am: Added doc dir.
+	* NEWS: Updated news with manpage.
+	
 	* NEWS: Updated with news for version 0.1.91.
 	* README: Updated to version 0.1.91.
 	* configure.in: Updated to version 0.1.91.
